src/test/ui/shadowed/shadowing-in-the-same-pattern.stderr
error[E0415]: identifier `a` is bound more than once in this parameter list
  --> $DIR/shadowing-in-the-same-pattern.rs:3:10
   |
LL | fn f((a, a): (isize, isize)) {}
   |          ^ used as parameter more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/shadowing-in-the-same-pattern.rs:6:13
   |
LL |     let (a, a) = (1, 1);
   |             ^ used in a pattern more than once

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0415, E0416.
For more information about an error, try `rustc --explain E0415`.
